--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <li><a href="category.html">Lifestyle</a></li>
                         <li><a href="category.html">Health</a></li>
                         <li><a href="category.html">Family</a></li>
-                        <li><a href="category.html">Management</a></li>
+                        <li><a href="category.html">Education</a></li>
                         <li><a href="category.html">Travel</a></li>
                         <li><a href="category.html">Work</a></li>
                         </ul>
